update createSongRequest swagger address from spotify_id to spotifyID.  change SONG_CREATED broadcast to broadcast the actual song instead of the songRequest.
